--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
@@ -20,6 +21,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "husky": "^9.1.7"
+    "@nuxt/test-utils": "^3.19.2",
+    "@playwright/test": "^1.55.0",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^18.0.1",
+    "husky": "^9.1.7",
+    "vitest": "^3.2.4"
   }
 }
