--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
+    "@pinia/nuxt": "^0.11.2",
     "eslint": "^9.34.0",
     "firebase": "^12.2.1",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
